# sysview-target

./: meson.build
SEGGER/: GLOBAL.h
